added a few more changes based on Part II of the tutorial

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+### Block cotent will insert itself in the base.html block section defined for content
+{% block content %}
+    <h1>Hi, {{ user.nickname }}</h1>
+    {% for post in posts %}
+    <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
+    {% endfor %}
+{% endblock %}
