--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,9 +2,16 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    {% if title %}
+        <title>{{ title }} - microblog </title>
+    {% else %}
+        <title> Welcome to the microblog </title>
+    {% endif %}
 </head>
 <body>
+    <div>Microblog: <a href="/index">Home</a></div>
+    <hr>
+    {% block content %}{% endblock %}
 
 </body>
 </html>
