--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     {% if title %}
         <title>{{ title }} - microblog </title>
-    {% else %}
+    {% else %}q
         <title> Welcome to the microblog </title>
     {% endif %}
 </head>
 <body>
-    <div>Microblog: <a href="/index">Home</a></div>
+    <div>Microblog:
+    <a href="{{ url_for('index') }}">Home</a>
+    {% if g.user.is_authenticated() %}
+    | <a href="{{ url_for('logout') }}">Logout</a>
+    {% endif %}
     <hr>
-
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul>
