--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     {% if title %}
         <title>{{ title }} - microblog </title>
-    {% else %}q
+    {% else %}
         <title> Welcome to the microblog </title>
     {% endif %}
 </head>
